pom.xml: fix surefire error